crates/elenchus-parser/tests/snapshots/errors__garbage_top_level_line.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"FACT a b\\n%%% not a statement\\nFACT c d\\n\")"
---
Syntax Error at line 2, col 1: expected a statement (IMPORT/FACT/NOT/PREMISE/RULE/CHECK)
  | %%% not a statement
  | ^--- here
